# helios-core

./: .gitignore  DEPLOYMENT.md  PHYSICS_REFERENCE.md  Physics_Mathematics_Validation_Suite.md  README.md  data.csv  helios_test_iv_multiplixel.csv  pyproject.toml  render.yaml  results.csv  sample_scientific_data.csv  vercel.json
.github/workflows/: test_determinism.yml
backend/: __init__.py  config.py  main.py  requirements.txt
backend/api/: analyze.py  diagnostics.py  export.py  ingest.py  measurements.py  queue.py  stateless_api.py
backend/models/: entities.py  queue_entities.py
backend/services/: citation_service.py  diagnostic_service.py  physics_service.py  queue_service.py
backend/tests/: test_bundle_completion.py  verify_physics.py
backend/tests/dark_analysis/: test_basics.py
backend/tools/: __init__.py  generate_bundle.py  ingest_file.py  manage_storage.py  solve_iv_curve.py  verify_citation.py
data/: helios_core.db
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalysisHub.tsx  AuditLogModal.tsx  BatchManager.tsx  CitationPanel.tsx  DiagnosticSidebar.tsx  FileUploader.tsx  GPUChartContainer.tsx  IntegrityVirtualList.tsx  ModeToggle.tsx  ParameterInspector.tsx  PerformanceShield.tsx  ProgressiveDiagnostics.tsx  ScientificSkeleton.tsx
frontend/src/hooks/: useDiagnostics.ts  useExportIntegrity.ts  usePriorityLoading.ts  useQueueManagement.ts  useScientificPlotData.tsx
frontend/src/lib/: api-config.ts  (+3 more)
scripts/: generate_sample_data.py
(+8 files in other folders)
