[project]
name = "helios-core"
version = "1.0.0"
description = "Deterministic, auditable, publication-ready IV characterization platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pvlib>=0.10.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.8.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
